--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,10 +31,12 @@ jobs:
       shell: bash
 
     - name: Commit and push changes
-      uses: stefanzweifel/git-auto-commit-action@v5
-      with:
-        commit_message: "Bump version to $VERSION"
-        file_pattern: pyproject.toml
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add pyproject.toml
+        git commit -m "Bump version to $VERSION"
+        git push origin HEAD:main
 
     - name: Build package
       run: python -m build
