--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,6 +26,7 @@ jobs:
         pip install build
 
     - name: Bump version in pyproject.toml
+      id: bump_version
       run: |
         VERSION=$(echo $GITHUB_REF | sed 's/refs\/tags\/v//')
         echo "VERSION=$VERSION" >> $GITHUB_ENV
@@ -36,10 +37,10 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git checkout -b bump-version-$VERSION
+        git checkout -b bump-version-${{ env.VERSION }}
         git add pyproject.toml
-        git commit -m "Bump version to $VERSION"
-        git push origin bump-version-$VERSION
+        git commit -m "Bump version to ${{ env.VERSION }}"
+        git push origin bump-version-${{ env.VERSION }}
       env:
         VERSION: ${{ env.VERSION }}
 
@@ -48,11 +49,11 @@ jobs:
       uses: peter-evans/create-pull-request@v5
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "Bump version to $VERSION"
+        commit-message: "Bump version to ${{ env.VERSION }}"
         branch: bump-version-${{ env.VERSION }}
         base: main
-        title: "Bump version to $VERSION"
-        body: "This PR bumps the version to $VERSION."
+        title: "Bump version to ${{ env.VERSION }}"
+        body: "This PR bumps the version to ${{ env.VERSION }}."
         labels: automerge
       env:
         VERSION: ${{ env.VERSION }}
