--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -34,9 +34,13 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         git checkout -b $BRANCH_NAME
         sed -i "s/^version = .*/version = \"$VERSION\"/" pyproject.toml
+        echo "Updated pyproject.toml:"
+        cat pyproject.toml
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add pyproject.toml
+        git status
+        git diff
         git commit -m "Bump version to $VERSION"
         git push origin $BRANCH_NAME
       shell: bash
