--- a/requirements.txt
+++ b/requirements.txt
@@ -28,9 +28,10 @@ huggingface-hub==0.23.1
 idna==3.7
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
-instructor==1.2.6
+instructor==1.3.4
 Jinja2==3.1.4
 joblib==1.4.2
+jsonref==1.1.0
 markdown-it-py==3.0.0
 markdownify==0.12.1
 MarkupSafe==2.1.5
@@ -38,7 +39,7 @@ mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.5
 numpy==1.26.4
-openai==1.30.1
+openai==1.35.10
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
