--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,8 @@ pydantic-2-mermaid==0.7.3
 pydantic_core==2.18.2
 Pygments==2.18.0
 PyPDF2==3.0.1
+pytest==8.2.2
+pytest-cov==5.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
