--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,15 +27,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
+        python -m pip install flake8 pytest black
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e .
+    - name: Check Black formatting
+      run: |
+        black --check --diff atomic_agents
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 atomic_agents --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        # flake8 atomic_agents --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 atomic_agents --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pytest --import-mode=importlib
