--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,4 +41,4 @@ jobs:
         flake8 atomic_agents --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --import-mode=importlib
+        pytest --import-mode=importlib --cov atomic_agents
