--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,8 @@
 exclude_lines =
     @abstractmethod
     @abc.abstractmethod
+exclude_also = 
+    if __name__ == .__main__.:
 
 [run]
 omit = */__init__.py
