--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,16 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.4.0
-asgiref==3.8.1
-attrs==23.2.0
 beautifulsoup4==4.12.3
-black==24.4.2
-cachetools==5.3.3
-certifi==2024.6.2
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-click==8.1.7
-colorama==0.4.6
-Deprecated==1.2.14
-distro==1.9.0
-docstring_parser==0.16
-filelock==3.14.0
-flake8==7.1.0
-frozenlist==1.4.1
-fsspec==2024.6.0
-google-auth==2.29.0
-googleapis-common-protos==1.63.0
-grpcio==1.64.1
-h11==0.14.0
-html2text==2024.2.26
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.23.1
-idna==3.7
-importlib-metadata==7.0.0
-importlib_resources==6.4.0
+faiss_cpu==1.8.0.post1
+google_api_python_client==2.114.0
+groq==0.9.0
 instructor==1.3.4
-Jinja2==3.1.4
-joblib==1.4.2
-jsonref==1.1.0
-markdown-it-py==3.0.0
 markdownify==0.12.1
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.0.5
 numpy==1.26.4
-openai==1.35.10
-opentelemetry-api==1.24.0
-opentelemetry-exporter-otlp-proto-common==1.24.0
-opentelemetry-exporter-otlp-proto-grpc==1.24.0
-opentelemetry-instrumentation==0.45b0
-opentelemetry-instrumentation-asgi==0.45b0
-opentelemetry-proto==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-opentelemetry-util-http==0.45b0
-packaging==24.0
-protobuf==4.25.3
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pydantic==2.7.1
-pydantic-2-mermaid==0.7.3
-pydantic_core==2.18.2
-Pygments==2.18.0
+openai==1.35.12
+playwright==1.45.0
+pydantic==2.8.2
 PyPDF2==3.0.1
 pytest==8.2.2
-pytest-cov==5.0.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-PyYAML==6.0.1
-requests==2.31.0
-requests-file==2.0.0
+Requests==2.32.3
 rich==13.7.1
-rpds-py==0.18.1
-rsa==4.9
-scikit-learn==1.5.0
-scipy==1.13.1
-setuptools==70.0.0
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
 sympy==1.12
-tenacity==8.3.0
-threadpoolctl==3.5.0
-tqdm==4.66.4
-typer==0.12.3
-typing_extensions==4.12.1
-urllib3==2.2.1
-websocket-client==1.8.0
-wrapt==1.16.0
-yarl==1.9.4
-youtube-transcript-api==0.6.2
-zipp==3.19.2
+youtube_transcript_api==0.6.2
