--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,9 +36,7 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 atomic_agents --count --select=E9,F63,F7,F82 --show-source --statistics
-        # The GitHub editor is 127 chars wide
-        flake8 atomic_agents --count --max-complexity=10 --max-line-length=127 --statistics
+        flake8 atomic_agents
     - name: Test with pytest
       run: |
         pytest --import-mode=importlib --cov atomic_agents
