--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "atomic_agents"
-version = "0.3.3"
+version = "0.3.4"
 description = "A versatile framework designed to facilitate the creation and management of intelligent agents."
 authors = [
     { name = "Kenny Vaneetvelde", email = "kenny.vaneetvelde@gmail.com" }
@@ -12,17 +12,15 @@ authors = [
 readme = "README.md"
 license = { file = "LICENSE" }
 dependencies = [
-    "beautifulsoup4==4.12.3",
-    "google_api_python_client==2.114.0",
-    "instructor==1.3.4",
-    "markdownify==0.12.1",
-    "openai==1.35.12",
-    "pydantic==2.8.2",
-    "PyPDF2==3.0.1",
-    "Requests==2.32.3",
-    "rich==13.7.1",
-    "sympy==1.12",
-    "youtube_transcript_api==0.6.2"
+    "beautifulsoup4~=4.12.3",
+    "google_api_python_client~=2.114.0",
+    "instructor~=1.3.4",
+    "markdownify~=0.12.1",
+    "openai~=1.35.12",
+    "pydantic~=2.8.2",
+    "PyPDF2~=3.0.1",
+    "Requests~=2.32.3",
+    "rich~=13.7.1",
 ]
 
 [project.urls]
