--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,19 @@ pytest
 pytest-cov
 
 # library dependencies
-beautifulsoup4==4.12.3
-faiss_cpu==1.8.0.post1
-google_api_python_client==2.114.0
-groq==0.9.0
-instructor==1.3.4
-markdownify==0.12.1
-numpy==1.26.4
-openai==1.35.12
-playwright==1.45.0
-pydantic==2.8.2
-PyPDF2==3.0.1
-pytest==8.2.2
-Requests==2.32.3
-rich==13.7.1
-sympy==1.12
-youtube_transcript_api==0.6.2
+beautifulsoup4~=4.12.3
+faiss_cpu~=1.8.0
+google_api_python_client~=2.114.0
+groq~=0.9.0
+instructor~=1.3.4
+markdownify~=0.12.1
+numpy~=1.26.4
+openai~=1.35.12
+playwright~=1.45.0
+pydantic~=2.8.2
+PyPDF2~=3.0.1
+pytest~=8.2.2
+Requests~=2.32.3
+rich~=13.7.1
+sympy~=1.12
+youtube_transcript_api~=0.6.2
