--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,15 @@ authors = [
 readme = "README.md"
 license = { file = "LICENSE" }
 dependencies = [
-    "beautifulsoup4~=4.12.3",
-    "google_api_python_client~=2.114.0",
-    "instructor~=1.3.4",
-    "markdownify~=0.12.1",
-    "openai~=1.35.12",
-    "pydantic~=2.8.2",
-    "PyPDF2~=3.0.1",
-    "Requests~=2.32.3",
-    "rich~=13.7.1",
+    "beautifulsoup4^=4.12.3",
+    "google_api_python_client^=2.114.0",
+    "instructor^=1.3.4",
+    "markdownify^=0.12.1",
+    "openai^=1.35.12",
+    "pydantic^=2.8",
+    "PyPDF2^=3.0.1",
+    "Requests^=2.32.3",
+    "rich^=13.7.1",
 ]
 
 [project.urls]
