--- a/.coveragerc
+++ b/.coveragerc
@@ -3,8 +3,10 @@ show_missing=true
 exclude_lines =
     @abstractmethod
     @abc.abstractmethod
-exclude_also = 
+exclude_also =
     if __name__ == .__main__.:
 
 [run]
-omit = */__init__.py
+omit =
+    */__init__.py
+    */tests/*
