Refactor asset organization and enhance documentation:
- Moved asset files from `atomic-agents/.assets/` to `.assets/`.
- Created a new `DEV_GUIDE.md` for contributing instructions, including setup and testing guidelines. (still under construction)
- Updated `README.md` to reflect changes in installation instructions, usage examples, and improved content on the framework's features.
- Revised quickstart examples in `atomic-examples/quickstart/README.md` to clarify setup and execution.
- Refined dependencies in `pyproject.toml` files, ensuring compatibility and removing unnecessary ones.

--- a/atomic-examples/quickstart/pyproject.toml
+++ b/atomic-examples/quickstart/pyproject.toml
@@ -8,8 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 atomic-agents = {path = "../..", develop = true}
-groq = "^0.11.0"
-mistralai = "^1.1.0"
+openai = ">=1.35.12,<2.0.0"
+groq = ">=0.11.0,<1.0.0"
+mistralai = ">=1.1.0,<2.0.0"
 
 
 [build-system]
