--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pyfiglet = ">=1.0.2,<2.0.0"
 textual = ">=0.82.0,<1.0.0"
 pyyaml = ">=6.0.2,<7.0.0"
 python-dotenv = "^1.0.1"
+pdoc3 = "^0.11.1"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=24.8.0,<25.0.0"
