Added Claude Anthropic client to basic chatbot different providers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest-asyncio = "^0.24.0"
 black = ">=24.8.0,<25.0.0"
 flake8 = ">=7.1.1,<8.0.0"
 openai = ">=1.35.12,<2.0.0"
+anthropic = ">=0.39.0,<1.0.0"
 pytest = ">=8.3.3,<9.0.0"
 pytest-cov = ">=5.0.0,<6.0.0"
 pytest-asyncio = "^0.24.0"
