--- a/atomic-examples/quickstart/pyproject.toml
+++ b/atomic-examples/quickstart/pyproject.toml
@@ -8,10 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 atomic-agents = {path = "../..", develop = true}
-instructor = ">=0.2.1,<1.0.0"
+instructor = ">=1.3.4,<2.0.0"
 openai = ">=1.35.12,<2.0.0"
 groq = ">=0.11.0,<1.0.0"
 mistralai = ">=1.1.0,<2.0.0"
+anthropic = ">=0.39.0,<1.0.0"
 
 
 [build-system]
