--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<4.0"
+python = ">=3.9,<4.0"
 instructor = ">=1.3.4,<2.0.0"
 pydantic = ">=2.8.0,<3.0.0"
 rich = ">=13.7.1,<14.0.0"
@@ -26,6 +26,7 @@ pyyaml = ">=6.0.2,<7.0.0"
 python-dotenv = "^1.0.1"
 pdoc3 = "^0.11.1"
 pytest-asyncio = "^0.24.0"
+jiter = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=24.8.0,<25.0.0"
