--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "atomic-agents"
-version = "1.0.12"
+version = "1.0.14"
 description = "A versatile framework for creating and managing intelligent agents."
 authors = ["Kenny Vaneetvelde <kenny.vaneetvelde@gmail.com>"]
 readme = "README.md"
@@ -23,18 +23,18 @@ gitpython = ">=3.1.43,<4.0.0"
 pyfiglet = ">=1.0.2,<2.0.0"
 textual = ">=0.82.0,<1.0.0"
 pyyaml = ">=6.0.2,<7.0.0"
-python-dotenv = "^1.0.1"
-pdoc3 = "^0.11.1"
-pytest-asyncio = "^0.24.0"
-jiter = "^0.5.0"
-requests = "^2.32.3"
+python-dotenv = ">=1.0.1,<2.0.0"
+pdoc3 = ">=0.11.1,<1.0.0"
+pytest-asyncio = ">=0.24.0,<1.0.0"
+jiter = ">=0.5.0,<1.0.0"
+requests = ">=2.32.3,<3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=24.8.0,<25.0.0"
 flake8 = ">=7.1.1,<8.0.0"
 pytest = ">=8.3.3,<9.0.0"
 pytest-cov = ">=5.0.0,<6.0.0"
-pytest-asyncio = "^0.24.0"
+pytest-asyncio = ">=0.24.0,<1.0.0"
 openai = ">=1.35.12,<2.0.0"
 
 [tool.poetry.scripts]
