--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 instructor>=1.3.4,<2.0.0
-openai>=1.35.12,<2.0.0
 pydantic>=2.8.0,<3.0.0
 rich>=13.7.1,<14.0.0
-toml>=0.10.2,<1.0.0
+gitpython>=3.1.43,<4.0.0
+pyfiglet>=1.0.2,<2.0.0
+textual>=0.82.0,<1.0.0
+pyyaml>=6.0.2,<7.0.0
+python-dotenv>=1.0.1,<2.0.0
+requests>=2.32.3,<3.0.0
