--- a/atomic-examples/deep-research/pyproject.toml
+++ b/atomic-examples/deep-research/pyproject.toml
@@ -9,6 +9,12 @@ readme = "README.md"
 python = "^3.13"
 atomic-agents = {path = "../.."}
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+markdownify = "^0.13.1"
+readability = "^0.3.1"
+readability-lxml = "^0.8.1"
+lxml-html-clean = "^0.4.0"
+lxml = "^5.3.0"
 
 
 [build-system]
