--- a/atomic-examples/quickstart/pyproject.toml
+++ b/atomic-examples/quickstart/pyproject.toml
@@ -13,7 +13,7 @@ openai = ">=1.35.12,<2.0.0"
 groq = ">=0.11.0,<1.0.0"
 mistralai = ">=1.1.0,<2.0.0"
 anthropic = ">=0.39.0,<1.0.0"
-
+python-dotenv = ">=1.0.1,<2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
