--- a/atomic-examples/web-search-agent/pyproject.toml
+++ b/atomic-examples/web-search-agent/pyproject.toml
@@ -11,6 +11,7 @@ atomic-agents = {path = "../..", develop = true}
 openai = ">=1.35.12,<2.0.0"
 pydantic = ">=2.9.2,<3.0.0"
 instructor = ">=1.5.2,<2.0.0"
+python-dotenv = ">=1.0.1,<2.0.0"
 
 
 [build-system]
