--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,12 @@ pytest = ">=8.3.3,<9.0.0"
 pytest-cov = ">=5.0.0,<6.0.0"
 pytest-asyncio = ">=0.24.0,<1.0.0"
 openai = ">=1.35.12,<2.0.0"
+sphinx = ">=7.2.6,<8.0.0"
+sphinx-rtd-theme = ">=2.0.0,<3.0.0"
+myst-parser = ">=2.0.0,<3.0.0"
+sphinx-copybutton = ">=0.5.2,<1.0.0"
+sphinx-design = ">=0.5.0,<1.0.0"
+sphinx-autobuild = ">=2024.2.4,<2025.0.0"
 
 [tool.poetry.scripts]
 atomic = "atomic_assembler.main:main"
