--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,9 +40,8 @@ jobs:
           pip install sphinx sphinx-rtd-theme sphinx-copybutton sphinx-design myst-parser
 
       - name: Build documentation
-        run: |
-          cd docs
-          make html
+        working-directory: docs
+        run: make html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -50,7 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_build/html
+          path: ${{ github.workspace }}/docs/_build/html
 
       - name: Deploy to GitHub Pages
         id: deployment
