--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -83,12 +83,27 @@ jobs:
           test -d "docs/_build/html" && echo "HTML dir exists at relative path" || echo "HTML dir NOT FOUND at relative path"
 
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
+        id: upload
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ${{ github.workspace }}/docs/_build/html
+          path: docs/_build/html  # Simplified path since we're using working-directory
+
+      - name: Verify artifact
+        run: |
+          echo "Artifact name: ${{ steps.upload.outputs.artifact-name }}"
+          echo "Artifact size: ${{ steps.upload.outputs.artifact-size }}"
+
+          # Wait a moment for artifact processing
+          sleep 10
+
+          # Verify the artifact is available
+          gh api -H "Accept: application/vnd.github+json" \
+            /repos/${{ github.repository }}/actions/artifacts \
+            --jq '.artifacts[] | select(.name=="github-pages") | .id'
 
       - name: Debug Post-Upload
         if: always()
@@ -108,3 +123,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
+        with:
+          artifact_name: github-pages
+          timeout: 600000  # 10 minutes
