Streamline GitHub Pages workflow by removing debug logging and simplifying artifact upload

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,58 +43,24 @@ jobs:
         working-directory: docs
         run: make html
 
-      - name: Debug Pre-Upload
-        run: |
-          echo "============= ENVIRONMENT ============="
-          echo "PWD: $PWD"
-          echo "GITHUB_WORKSPACE: ${{ github.workspace }}"
-          echo "PATH: $PATH"
-          echo "RUNNER_WORKSPACE: ${{ runner.workspace }}"
-
-          echo "============= DIRECTORY STRUCTURE ============="
-          echo "Root directory:"
-          ls -la
-          echo "Docs directory:"
-          ls -la docs/
-          echo "Build directory:"
-          ls -la docs/_build/
-          echo "HTML directory:"
-          ls -la docs/_build/html/
-
-          echo "============= FILE PERMISSIONS ============="
-          echo "Docs directory permissions:"
-          stat docs/
-          echo "Build directory permissions:"
-          stat docs/_build/
-          echo "HTML directory permissions:"
-          stat docs/_build/html/
-
-          echo "============= FILE COUNTS & SIZES ============="
-          echo "Total files in html directory:"
-          find docs/_build/html -type f | wc -l
-          echo "Directory sizes:"
-          du -h docs/_build/html
-
-          echo "============= FULL PATH VERIFICATION ============="
-          echo "Absolute path to html directory:"
-          realpath docs/_build/html
-          echo "Testing path existence:"
-          test -d "${{ github.workspace }}/docs/_build/html" && echo "HTML dir exists at workspace path" || echo "HTML dir NOT FOUND at workspace path"
-          test -d "docs/_build/html" && echo "HTML dir exists at relative path" || echo "HTML dir NOT FOUND at relative path"
-
       - name: Setup Pages
-        id: pages
         uses: actions/configure-pages@v4
 
+      - name: Prepare artifact
+        run: |
+          # Ensure we're in the root directory
+          cd ${{ github.workspace }}
+          # Debug the path
+          echo "Current directory: $(pwd)"
+          echo "HTML directory contents:"
+          ls -la docs/_build/html/
+
       - name: Upload artifact
-        id: upload
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/_build/html
-          retention-days: 1
+          path: ./docs/_build/html
 
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          token: ${{ github.token }}
