Modify Sphinx documentation build to suppress warning errors
- Update documentation build command to prevent treating warnings as errors
- Use SPHINXOPTS flag to adjust Sphinx build behavior
- Maintain documentation build process with more lenient warning handling

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Build documentation
         working-directory: docs
-        run: make html
+        run: |
+          # Don't treat warnings as errors
+          SPHINXOPTS="-n" make html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
